--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -11,3 +11,12 @@
 	margin-right: 2px;
 	background-color: #ff7f50;
 }
+.timeandspace {
+	display: flex;
+	align-items: center;
+	border: 4px solid #6495ed;
+	width: 58%;
+	justify-content: space-around;
+	margin-top: 2rem;
+	padding: 1rem;
+}
