--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -1,4 +1,18 @@
 body {
 	margin: 0;
 	overflow-x: hidden;
+	font-size: 16px;
+	font-weight: 600;
+	font-family: sans-serif;
+}
+
+.timeandspace {
+	display: flex;
+	align-items: center;
+	border: 4px solid #6495ed;
+	width: 58%;
+
+	justify-content: space-around;
+	margin-top: 6rem;
+	padding: 1rem;
 }
